Make sure you monitor it too

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -111,14 +111,16 @@
             first). An example of this can be seen on the <a href="https://github.com/golang/vscode-go/issues/2094">Go
                 for VSCode repository.</a> </li>
         <li> Some organizations or projects also mirror their content themselves and choose to keep their Wikis
-            editable. <a href="https://github.com/koalaman/shellcheck/issues/2487">The ShellCheck project did
-            this</a>. NOTE: GHWSEE cannot automatically disengage itself for wikis backed by this setup as it is
-            technically impossible to automatically detect. Please let me know if your project or any other project does
-            this and a blacklist entry can be <a
+            editable. <a href="https://github.com/koalaman/shellcheck/issues/2487">The ShellCheck project did this</a>.
+            NOTE: GHWSEE cannot automatically disengage itself for wikis backed by this setup as it is technically
+            impossible to automatically detect. Please let me know if your project or any other project does this and a
+            blacklist entry can be <a
                 href="https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/src/decommission.rs#L3283">added</a>.
         </li>
         <li>If you or your organization does any of this, please reach out to me to try to expedite search engines to
-            remove GHWSEE's entries from search engine results for the migrated wiki.</li>
+            remove GHWSEE's entries from search engine results for the migrated wiki. Please also make sure to produce
+            the necessary sitemaps and monitor your own wiki's content indexing progress via tools such as Google Search
+            Console.</li>
     </ul>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
