--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -222,7 +222,7 @@
     <nav id="header_button">
         <a href="{{ original_url }}" class="visit_url_button"> View Page on GitHub.com</a>
         <p>⚠️ The <a href="https://en.wiktionary.org/wiki/indexable">indexable</a> preview below may have <em>rendering
-                errors</em>, <em>broken links</em>, <em>missing images</em>, and may not include the <em>last updated
+                errors</em>, <em>broken links</em>, <em>missing images</em>, and may not include the <em>last modified
                 date.</em> Please view the original page on GitHub.com and not this indexable preview if you intend to
             <em>use</em> this content. </p>
     </nav>
