--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -49,6 +49,11 @@
             font-size: large;
         }
 
+        #content, #index {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
         #footer_info {
             position: sticky;
             bottom: 0;
