--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -49,26 +49,19 @@
             blocking to selective HTTP Header-based unblocking. The observed criteria had been observed to be changing
             periodically but may have stablized since. </li>
         <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
-            Collaborators" and repository has 798 stars and above. <a
+            Collaborators" and repository has 798 stars and above. About <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
-                About 3,300</a> GitHub.com Wikis meet this criteria and can be found on search engines such as Google /
+                3,300</a> GitHub.com Wikis meet this criteria and can be found on search engines such as Google /
             DuckDuckGo. </li>
-        <li>
-            <a
-                href="https://docs.google.com/spreadsheets/d/17yHqnm_cGDrOTCH2TPnpCU9qaxESuF0q0zuoORl76g4/edit#gid=1481444161">About
+        <li> About <a href="https://docs.google.com/spreadsheets/d/17yHqnm_cGDrOTCH2TPnpCU9qaxESuF0q0zuoORl76g4/edit">
                 4,700</a> repositories have 798 stars and above and can't be directly indexed by search engines. These
             repositories do not appear to have the "Editing Restricted to Repository Collaborators" option turned on.
             You would likely recognize some of these repositories no matter where your expertise may lie. Many of these
-            projects have large amounts of content in their Wikis and are very active.
-        </li>
+            projects have large amounts of content in their Wikis and are very active. </li>
         <li> There are still about 420,000+ GitHub.com Wikis that are below 798 stars and/or publically editable. These
             can't be directly indexed by search engines as well. </li>
-        <li> <strong>NOTE</strong>: The above most recently observed criteria may not be currently accurate either: <a
-                href="https://github.com/microsoft/diskspd/wiki">https://github.com/microsoft/diskspd/wiki</a> is
-            non-editable, above the star count, but is non-indexable as well. To reiterate, the current criteria is
-            currently unknown. </li>
-        <li>GHWSEE is helping GitHub Wikis that aren't indexable be indexable in search engines and is in the process of
-            partially decommissioning itself for GitHub Wikis that are directly indexable.</li>
+        <li>GHWSEE is helping GitHub Wikis that aren't indexable be indexable in search engines and is continually
+            decommissioning itself for GitHub Wikis that are directly indexable.</li>
     </ul>
     <p> GHWSEE proxies the rendered contents of the pages and has a link with a large button at the top to visit the
         page on GitHub for everyday usage and a link at the bottom explaining what GHWSEE is. The content of this
@@ -85,7 +78,7 @@
             April 2021 (9 years since 2012), GitHub did not document this limitation; the only way you knew was by
             previously looking at robots.txt.</a> A warning is still not present in GitHub's UI itself about this
         limitation. By showing up in real-world search results, it is hoped that greater awareness to this issue can be
-        made.</p>
+        made amongst affected communities and projects.</p>
     <p> If you are a GitHub Wiki maintainer, you may want to consider GitHub Pages backed by a public repository for
         your community's content as a more crawlable, stable, blessed, and probably higher search ranking alternative.
         <a
@@ -113,14 +106,15 @@
         <li> Some organizations or projects also mirror their content themselves and choose to keep their Wikis
             editable. <a href="https://github.com/koalaman/shellcheck/issues/2487">The ShellCheck project did this</a>.
             NOTE: GHWSEE cannot automatically disengage itself for wikis backed by this setup as it is technically
-            impossible to automatically detect. Please let me know if your project or any other project does this and a
-            blacklist entry can be <a
+            impossible to automatically detect. Please <a
+                href="https://github.com/nelsonjchen/github-wiki-see-rs/issues">create an issue</a> if your project or
+            any other project still permits editing but mirrors their content themselves and a blacklist entry can be <a
                 href="https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/src/decommission.rs#L3283">added</a>.
         </li>
         <li>If you or your organization does any of this, please reach out to me to try to expedite search engines to
             remove GHWSEE's entries from search engine results for the migrated wiki. Please also make sure to produce
-            the necessary sitemaps and monitor your own wiki's content indexing progress via tools such as Google Search
-            Console.</li>
+            the necessary sitemaps and monitor your own wiki's content indexing progress and ranking via tools such as
+            Google Search Console.</li>
     </ul>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
@@ -187,7 +181,7 @@
     <p>People shouldn't have linked to this site but maybe the warnings weren't big and red enough. <a
             href="https://github.com/nelsonjchen/github-wiki-see-rs/issues/6">Flashing yellow was very unpopular.</a>
     </p>
-    <h3>Partial Decommissioning (In Progress)</h3>
+    <h3>Partial Decommissioning (Continuous)</h3>
     <p> As of January 2022, GitHub does appear to be letting a few Wikis be indexed according to some non-public
         criteria. These small sample of Wikis allow native indexing by not having a <code>x-robots-tag: none</code> HTTP
         header. GHWSEE has a manually periodically generated list of these Wikis burned in and will permanently
