--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -49,7 +49,7 @@
             blocking to selective HTTP Header-based unblocking. The observed criteria had been observed to be changing
             periodically but may have stablized since. </li>
         <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
-            Collaborators" and repository has 798 stars and above. About <a
+            Collaborators" and if the repository has 798 stars and above. About <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
                 3,300</a> GitHub.com Wikis meet this criteria and can be found on search engines such as Google /
             DuckDuckGo. </li>
@@ -114,7 +114,7 @@
         <li>If you or your organization does any of this, please reach out to me to try to expedite search engines to
             remove GHWSEE's entries from search engine results for the migrated wiki. Please also make sure to produce
             the necessary sitemaps and monitor your own wiki's content indexing progress and ranking via tools such as
-            Google Search Console.</li>
+            Google Search Console or Bing Webmaster Tools (Bing is also a DuckDuckGo source).</li>
     </ul>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
