--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -45,7 +45,7 @@
         </li>
         <li> GitHub is currently permitting a select criteria of GitHub Wikis to be directly indexed by not including
             the header blocking indexing. They have not released their testing criteria. This appears to have started
-            around Q4 2021 with the groundwork having being laid by transistioning from blanket site-wide robots.txt
+            around Q4 2021 with the groundwork having being laid by transitioning from blanket site-wide robots.txt
             blocking to selective HTTP Header-based unblocking. The observed criteria had been observed to be changing
             periodically but may have stablized since. </li>
         <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
