--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -198,8 +198,7 @@
         </li>
         <li><a href="/m/naver/billboard.js/wiki">naver/billboard.js</a>
         </li>
-        <li><a href="/m/koalaman/shellcheck/wiki">koalaman/shellcheck</a> (project self-mirrors)
-        </li>
+        <li><a href="/m/koalaman/shellcheck/wiki">koalaman/shellcheck</a> (project self-mirrors) </li>
     </ul>
     <hr>
     <p> This project is not affiliated with GitHub in any way, if it wasn't obvious from the substandard CSS and code.
