Found an example of 500 stars repo that is indexable

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -49,16 +49,17 @@
             blocking to selective HTTP Header-based unblocking. The observed criteria had been observed to be changing
             periodically but may have stablized since. </li>
         <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
-            Collaborators" and if the repository has 798 stars and above. About <a
+            Collaborators" and if the repository has ~500 stars and above. About <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
-                3,300</a> GitHub.com Wikis meet this criteria and can be found on search engines such as Google /
-            DuckDuckGo. </li>
+                3,300</a> GitHub.com Wikis met this criteria and can be found on search engines such as Google /
+            DuckDuckGo according to a survey in February 2022. </li>
         <li> About <a href="https://docs.google.com/spreadsheets/d/17yHqnm_cGDrOTCH2TPnpCU9qaxESuF0q0zuoORl76g4/edit">
-                4,700</a> repositories have 798 stars and above and can't be directly indexed by search engines. These
-            repositories do not appear to have the "Editing Restricted to Repository Collaborators" option turned on.
-            You would likely recognize some of these repositories no matter where your expertise may lie. Many of these
-            projects have large amounts of content in their Wikis and are very active. </li>
-        <li> There are still about 420,000+ GitHub.com Wikis that are below 798 stars and/or publically editable. These
+                4,700</a> repositories have 798 stars and above and can't be directly indexed by search engines from the
+            same survey in February 2022. These repositories do not appear to have the "Editing Restricted to Repository
+            Collaborators" option turned on. You would likely recognize some of these repositories no matter where your
+            expertise may lie. Many of these projects have large amounts of content in their Wikis and are very active.
+        </li>
+        <li> There are still about 400,000+ GitHub.com Wikis that are below ~500 stars and/or publically editable. These
             can't be directly indexed by search engines as well. </li>
         <li>GHWSEE is helping GitHub Wikis that aren't indexable be indexable in search engines and is continually
             decommissioning itself for GitHub Wikis that are directly indexable.</li>
@@ -197,6 +198,8 @@
         <li><a href="/m/PixarAnimationStudios/USD/wiki">PixarAnimationStudios/USD</a>
         </li>
         <li><a href="/m/naver/billboard.js/wiki">naver/billboard.js</a>
+        </li>
+        <li><a href="/m/IgniteUI/igniteui-angular/wiki">IgniteUI/igniteui-angular (~500 stars)</a>
         </li>
         <li><a href="/m/koalaman/shellcheck/wiki">koalaman/shellcheck</a> (project self-mirrors) </li>
     </ul>
