--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -199,8 +199,7 @@
         </li>
         <li><a href="/m/naver/billboard.js/wiki">naver/billboard.js</a>
         </li>
-        <li><a href="/m/IgniteUI/igniteui-angular/wiki">IgniteUI/igniteui-angular (~500 stars)</a>
-        </li>
+        <li><a href="/m/IgniteUI/igniteui-angular/wiki">IgniteUI/igniteui-angular</a> (~500 stars) </li>
         <li><a href="/m/koalaman/shellcheck/wiki">koalaman/shellcheck</a> (project self-mirrors) </li>
     </ul>
     <hr>
