--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -51,14 +51,14 @@
         <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
             Collaborators" and if the repository has ~500 stars and above. About <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
-                3,300</a> GitHub.com Wikis met this criteria and can be found on search engines such as Google /
-            DuckDuckGo according to a survey in February 2022. </li>
+                3,300</a> GitHub.com Wikis met an older criteria requiring ~1000+ and can be found on search engines
+            such as Google / DuckDuckGo according to a survey in February 2022. </li>
         <li> About <a href="https://docs.google.com/spreadsheets/d/17yHqnm_cGDrOTCH2TPnpCU9qaxESuF0q0zuoORl76g4/edit">
                 4,700</a> repositories have 798 stars and above and can't be directly indexed by search engines from the
-            same survey in February 2022. These repositories do not appear to have the "Editing Restricted to Repository
-            Collaborators" option turned on. You would likely recognize some of these repositories no matter where your
-            expertise may lie. Many of these projects have large amounts of content in their Wikis and are very active.
-        </li>
+            same survey with the older criteria in February 2022. These repositories do not appear to have the "Editing
+            Restricted to Repository Collaborators" option turned on. You would likely recognize some of these
+            repositories no matter where your expertise may lie. Many of these projects have large amounts of content in
+            their Wikis and are very active. </li>
         <li> There are still about 400,000+ GitHub.com Wikis that are below ~500 stars and/or publically editable. These
             can't be directly indexed by search engines as well. </li>
         <li>GHWSEE is helping GitHub Wikis that aren't indexable be indexable in search engines and is continually
