wiki editor guidance

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -140,7 +140,8 @@
                     href="https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md">https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md</a>
             </li>
         </ul>
-        <li>Wiki Editor: If you are a GitHub Wiki contributor, simply edit your content periodically and the <a
+        <li>Wiki Editor whose Wiki does not meet the native indexing criterias: If you are a GitHub Wiki contributor,
+            simply edit your content periodically and the <a
                 href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a> will eventually
             pick it up and notify search engines. Because this just isn't GitHub.com, don't expect a high ranking as
             your content will probably be on page 2, 3, or worse. That is still much better than the previous
