--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -49,7 +49,8 @@
             font-size: large;
         }
 
-        #content, #index {
+        #content,
+        #index {
             padding-left: 10px;
             padding-right: 10px;
         }
@@ -138,7 +139,7 @@
             background-color: #3369ff;
             box-shadow: inset 0 -0.8em 0 -0.3em rgba(0, 0, 0, 0.17);
             text-align: center;
-            position: relative;
+            /* position: relative; */
             width: 100%;
         }
 
@@ -155,41 +156,6 @@
             a.visit_url_button {
                 display: block;
                 margin: 0.4em auto;
-            }
-        }
-
-        .bouncy {
-            animation: bouncy 5s infinite linear;
-            position: relative;
-        }
-
-        @keyframes bouncy {
-            0% {
-                top: 0em
-            }
-
-            40% {
-                top: 0em
-            }
-
-            43% {
-                top: -0.9em
-            }
-
-            46% {
-                top: 0em
-            }
-
-            48% {
-                top: -0.4em
-            }
-
-            50% {
-                top: 0em
-            }
-
-            100% {
-                top: 0em;
             }
         }
 
@@ -218,6 +184,10 @@
             border: 1px solid black;
         }
 
+        .visit_url_link {
+            font-size: xx-large;
+        }
+
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Not used, did not want to risk non-indexing. -->
@@ -231,13 +201,13 @@
 <body>
     <div id="main">
         <nav id="header_button">
-            <a href="{{ original_url }}" class="visit_url_button"> View Page on GitHub.com</a>
             <p>⚠️ The <a href="https://en.wiktionary.org/wiki/indexable">indexable</a> preview below may have
                 <em>rendering errors</em>, <em>broken links</em>, <em>missing images</em>, and may not include the
-                <em>last modified date.</em> Please view the original page on GitHub.com and not this indexable preview
-                if you intend to <em>use</em> this content. </p>
+                <em>last modified date.</em> <a href="{{ original_url }}"> Please view the original page on GitHub.com and not this indexable preview
+                if you intend to <em>use</em> this content. </a></p>
         </nav>
         <aside id="header_info">
+            <a href="{{ original_url }}" class="visit_url_button">Click / TAP HERE TO View Page on GitHub.com ➡️</a>
             <p>📄 URL: <a href="{{ original_url }}" class="visit_url_link">{{ original_url }}</a>
             </p>
             <!-- Last Modified Date added around here from redirect checker-->
