--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -210,6 +210,8 @@
             <a href="{{ original_url }}" class="visit_url_button">Click / TAP HERE TO View Page on GitHub.com ➡️</a>
             <p>📄 URL: <a href="{{ original_url }}" class="visit_url_link">{{ original_url }}</a>
             </p>
+            <p>There are <em>no ads</em> in this search engine enabler service. The button and/or link above will
+                take you <em>directly</em> to GitHub.</p>
             <!-- Last Modified Date added around here from redirect checker-->
         </aside>
         <article id="content">
@@ -222,8 +224,7 @@
         <aside id="footer_info">
             <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a search engine enabler for GitHub Wikis
                     as <span class="blocks">GitHub blocks most GitHub Wikis from search engines.</span></a></p>
-            <p>There are <em>no ads</em> in this search engine enabler service. The button and/or link at the top will
-                take you <em>directly</em> to GitHub.</p>
+
         </aside>
     </div>
 </body>
