--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -126,18 +126,18 @@
 
         a.visit_url_button {
             display: inline-block;
-            padding: 1.7em 0.4em;
+            padding: 0.4em 0.4em;
             margin: 0em 0.3em 0.3em 0;
-            border-radius: 10.15em;
+            border-radius: 01.15em;
             box-sizing: border-box;
             text-decoration: none;
             font-family: sans-serif;
             text-transform: uppercase;
             font-size: 1.7em;
-            font-weight: 400;
+            font-weight: 800;
             color: #FFFFFF;
             background-color: #3369ff;
-            box-shadow: inset 0 -0.8em 0 -0.3em rgba(0, 0, 0, 0.17);
+            box-shadow: inset 0 -0.6em 0 -0.3em rgba(0, 0, 0, 0.17);
             text-align: center;
             /* position: relative; */
             width: 100%;
@@ -203,15 +203,15 @@
         <nav id="header_button">
             <p>⚠️ The <a href="https://en.wiktionary.org/wiki/indexable">indexable</a> preview below may have
                 <em>rendering errors</em>, <em>broken links</em>, <em>missing images</em>, and may not include the
-                <em>last modified date.</em> <a href="{{ original_url }}"> Please view the original page on GitHub.com and not this indexable preview
-                if you intend to <em>use</em> this content. </a></p>
+                <em>last modified date.</em> <a href="{{ original_url }}"> Please view the original page on GitHub.com
+                    and not this indexable preview if you intend to <em>use</em> this content. </a></p>
         </nav>
         <aside id="header_info">
             <a href="{{ original_url }}" class="visit_url_button">Click / TAP HERE TO View Page on GitHub.com ➡️</a>
             <p>📄 URL: <a href="{{ original_url }}" class="visit_url_link">{{ original_url }}</a>
             </p>
-            <p>There are <em>no ads</em> in this search engine enabler service. The button and/or link above will
-                take you <em>directly</em> to GitHub.</p>
+            <p>There are <em>no ads</em> in this search engine enabler service. The button and/or link above will take
+                you <em>directly</em> to GitHub.</p>
             <!-- Last Modified Date added around here from redirect checker-->
         </aside>
         <article id="content">
@@ -224,7 +224,6 @@
         <aside id="footer_info">
             <p><a href="/"><span class="emoji">ℹ️</span>About GitHub Wiki SEE, a search engine enabler for GitHub Wikis
                     as <span class="blocks">GitHub blocks most GitHub Wikis from search engines.</span></a></p>
-
         </aside>
     </div>
 </body>
