Add social PNG to try to call more attention to front page
Closes Add a social graph image that says "Explanation on Front Page" #288

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="GitHub Wiki Search Engine Enablement">
     <meta property="og:description"
         content="GitHub blocks direct indexing of many GitHub Wikis. This is a workaround service to get those GitHub Wikis indexed in Google and other search engines.">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://github-wiki-see.page/social.png">
 </head>
 
 <body id="main">
