--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -169,6 +169,7 @@
         <li><a
                 href="/m/Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams/wiki">Erithano/Timon-Your-FAQ-bot-for-Microsoft-Teams</a>
             - Irony </li>
+        <li><a href="/m/node-config/node-config/wiki">node-config/node-config</a> - not sure why this isn't indexing </li>
         <li><a href="/m/wlsdn2316/1-tetris-/wiki">wlsdn2316/1-tetris-</a> - Funky </li>
     </ul>
     <h2>Project, README, Source, Issues, and other information</h2>
