last modified is pretty reliable

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -202,9 +202,9 @@
     <div id="main">
         <nav id="header_button">
             <p>⚠️ The <a href="https://en.wiktionary.org/wiki/indexable">indexable</a> preview below may have
-                <em>rendering errors</em>, <em>broken links</em>, <em>missing images</em>, and may not include the
-                <em>last modified date.</em> <a href="{{ original_url }}"> Please view the original page on GitHub.com
-                    and not this indexable preview if you intend to <em>use</em> this content. </a></p>
+                <em>rendering errors</em>, <em>broken links</em>, and <em>missing images</em>. <a
+                    href="{{ original_url }}"> Please view the original page on GitHub.com and not this indexable
+                    preview if you intend to <em>use</em> this content. </a></p>
         </nav>
         <aside id="header_info">
             <a href="{{ original_url }}" class="visit_url_button">Click / TAP HERE TO View Page on GitHub.com ➡️</a>
