--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -171,6 +171,7 @@
             - Irony </li>
         <li><a href="/m/node-config/node-config/wiki">node-config/node-config</a> - not sure why this isn't indexing </li>
         <li><a href="/m/wlsdn2316/1-tetris-/wiki">wlsdn2316/1-tetris-</a> - Funky </li>
+        <li><a href="/m/pyenv/pyenv/wiki">pyenv/pyenv</a> - They don't know. How long till they find out? </li>
     </ul>
     <h2>Project, README, Source, Issues, and other information</h2>
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
