Crawling was blocked in the past; It's now indexing.

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -37,7 +37,7 @@
     <p>The situation so far:</p>
     <ul>
         <li>
-            <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository wiki
+            <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents indexing of repository wiki
                 content</a> through <a
                 href="https://github.com/github/feedback/discussions/4992#discussioncomment-1448177">HTTP headers</a>.
             The blocking greatly reduces the effectiveness of content of pages on affected Wikis if they cannot be
