Update front_page.html to clarify GitHub's indexing criteria for Wikis
Official documentation

Closes https://github.com/nelsonjchen/github-wiki-see-rs/issues/696

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -43,14 +43,11 @@
             The blocking greatly reduces the effectiveness of content of pages on affected Wikis if they cannot be
             searched on search engines such as Google or DuckDuckGo.
         </li>
-        <li> GitHub is currently permitting a select criteria of GitHub Wikis to be directly indexed by not including
-            the header blocking indexing. They have not released their testing criteria. This appears to have started
-            around Q4 2021 with the groundwork having being laid by transitioning from blanket site-wide robots.txt
-            blocking to selective HTTP Header-based unblocking. The observed criteria had been observed to be changing
-            periodically but may have stablized since. </li>
-        <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
-            Collaborators" and if the repository has ~500 stars and above. About <a
-                href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
+        <li> GitHub has officially documented that they only index certain GitHub Wikis. According to <a
+                href="https://docs.github.com/en/communities/documenting-your-project-with-wikis/about-wikis">GitHub's documentation</a>,
+                "Search engines will only index wikis with 500 or more stars that you configure to prevent public editing."
+                This provides clarity on the exact criteria being used, which was previously unclear.</li>
+        <li> About <a href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
                 3,300</a> GitHub.com Wikis met an older criteria requiring ~1000+ and can be found on search engines
             such as Google / DuckDuckGo according to a survey in February 2022. </li>
         <li> About <a href="https://docs.google.com/spreadsheets/d/17yHqnm_cGDrOTCH2TPnpCU9qaxESuF0q0zuoORl76g4/edit">
@@ -59,7 +56,7 @@
             Restricted to Repository Collaborators" option turned on. You would likely recognize some of these
             repositories no matter where your expertise may lie. Many of these projects have large amounts of content in
             their Wikis and are very active. </li>
-        <li> There are still about 400,000+ GitHub.com Wikis that are below ~500 stars and/or publically editable. These
+        <li> There are still about 400,000+ GitHub.com Wikis that are below 500 stars and/or publically editable. These
             can't be directly indexed by search engines as well. </li>
         <li>GHWSEE is helping GitHub Wikis that aren't indexable be indexable in search engines and is continually
             decommissioning itself for GitHub Wikis that are directly indexable.</li>
